modfied core.util with new functionality

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <body>
         <canvas id="view" ></canvas>
         <script type="text/javascript" src="core.js" ></script>
+        <script type="text/javascript" src="core.util.js" ></script>
 		<script type="text/javascript" src="keagan.js" ></script>
         <script type="text/javascript" src="init.js" ></script>
     </body>
