New stuff for loading external resources

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <canvas id="view" ></canvas>
         <script type="text/javascript" src="core.js" ></script>
         <script type="text/javascript" src="core.util.js" ></script>
+        <script type="text/javascript" src="core.resource.js" ></script>
+        <script type="text/javascript" src="core.canvas.js" ></script>
 		<script type="text/javascript" src="keagan.js" ></script>
-        <script type="text/javascript" src="init.js" ></script>
+        <script type="text/javascript" >
+            setTimeout(ru.core.init, 1000);
+        </script>
     </body>
 </html>
