updates for drawing

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
         <script type="text/javascript" src="core.util.js" ></script>
         <script type="text/javascript" src="core.resource.js" ></script>
         <script type="text/javascript" src="core.canvas.js" ></script>
+        <script type="text/javascript" src="core.game.js" ></script>
+        <script type="text/javascript" src="keagan.bot.js" ></script>
+        <script type="text/javascript" src="hugo.bot.js" ></script>
 		<script type="text/javascript" src="keagan.js" ></script>
         <script type="text/javascript" >
-            setTimeout(function() {
-                ru.core.init();
-
-                ru.resource.load.image("x-icon", "resources/delete-icon.png");
-
-            }, 1000);
+            
         </script>
     </body>
 </html>
