seriously, last change then going to bed - better exception display and hit display

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     { name:"tracker-cooldown", url:"resources/tracker-cooldown.png" },
                     { name:"player1", url:"resources/player-1-ship.png" },
                     { name:"player2", url:"resources/player-2-ship.png" },
-                    { name:"health", url:"resources/health-bar.png" }
+                    { name:"health", url:"resources/health-bar.png" },
+                    { name:"exception", url:"resources/exception.png" }
                 ],
                 delay:1000,
                 fps:30,
