updated to show a winner once health has been depleted

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <head>
+        <style type="text/css" >
+            html, body { background :#000; margin : 0; padding : 0; }
+        </style>
     </head>
     <body>
         <canvas id="view" ></canvas>
@@ -43,10 +46,15 @@
                     { name:"tracker", url:"resources/tracker.png" },
                     { name:"tracker-ready", url:"resources/tracker-ready.png" },
                     { name:"tracker-cooldown", url:"resources/tracker-cooldown.png" },
+                    { name:"tracker-fade-1", url:"resources/tracker-fade-1.png" },
+                    { name:"tracker-fade-2", url:"resources/tracker-fade-2.png" },
+                    { name:"tracker-fade-3", url:"resources/tracker-fade-3.png" },
                     { name:"player1", url:"resources/player-1-ship.png" },
                     { name:"player2", url:"resources/player-2-ship.png" },
                     { name:"health", url:"resources/health-bar.png" },
-                    { name:"exception", url:"resources/exception.png" }
+                    { name:"exception", url:"resources/exception.png" },
+                    { name:"player1win", url:"resources/player-1-wins.png" },
+                    { name:"player2win", url:"resources/player-2-wins.png" }
                 ],
                 delay:1000,
                 fps:30,
