Added a 'draw' condition and centered projectiles better on ships

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     { name:"health", url:"resources/health-bar.png" },
                     { name:"exception", url:"resources/exception.png" },
                     { name:"player1win", url:"resources/player-1-wins.png" },
-                    { name:"player2win", url:"resources/player-2-wins.png" }
+                    { name:"player2win", url:"resources/player-2-wins.png" },
+                    { name:"drawGame", url:"resources/draw-game.png" }
                 ],
                 delay:1000,
                 fps:30,
@@ -95,7 +96,7 @@
                 },
                 
                 //player units
-                player1:new hugobot(),
+                player1:new dopeybot(),
                 player2:new hugobot()
             });
         
