Moved to keaganbot - time for battle!

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 },
                 
                 //player units
-                player1:new dopeybot(),
+                player1:new keaganbot(),
                 player2:new hugobot()
             });
         
